[package]
name = "starknet-gateway"
version = "0.6.0"
authors = ["Jonathan LEI <me@xjonathan.dev>", "Antiyro <antiyro@kasar.io>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/kasarlabs/starknet-gateway"
homepage = "https://kasar.io/"
description = """
A functional post-depreciation gateway implementation, inspired by the starknet-providers crate from https://github.com/xJonathanLEI/starknet-rs
"""
keywords = ["ethereum", "starknet", "web3"]
exclude = ["test-data/**"]

[dependencies]
starknet-core = { version = "0.6.1", git = "https://github.com/xJonathanLEI/starknet-rs.git", branch = "master", package = "starknet-core" }
async-trait = "0.1.68"
auto_impl = "1.0.1"
ethereum-types = "0.14.1"
flate2 = "1.0.25"
log = "0.4.19"
url = "2.3.1"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls"] }
thiserror = "1.0.40"
serde = "1.0.160"
serde_json = "1.0.96"
serde_with = "2.3.2"

[dev-dependencies]
starknet-gateway = { path = ".", features = ["no_unknown_fields"] }
tokio = { version = "1.27.0", features = ["full"] }

[features]
default = []
no_unknown_fields = [
    "starknet-core/no_unknown_fields"
]
